update Maven and wrapper and fix styles